crates/guatiao/include/guatiao.h


#define GUATIAO_MAX_DEPTH 128
#define GUATIAO_MERGE_SIMPLE 1
#define GUATIAO_MERGE_DEEP 2
#define GUATIAO_MERGE_SUBSTITUTE 3
#define GUATIAO_MERGE_OPT_MERGELISTS 1
#define GUATIAO_ABI_VERSION 1
#define GUATIAO_PAYLOAD_SEPARATOR '.'
typedef enum guatiao_status guatiao_status;
typedef uint32_t guatiao_status;
typedef struct guatiao_str {
  const uint8_t *ptr;
  size_t len;
} guatiao_str;
typedef struct guatiao_alloc {
  uint32_t struct_size;
  void *ctx;
  void *(*alloc)(void *ctx, size_t size, size_t align);
  void (*free)(void *ctx, void *ptr, size_t size, size_t align);
  void (*release)(void *ctx);
} guatiao_alloc;
typedef struct guatiao_buffer {
  uint8_t *ptr;
  size_t len;
  size_t cap;
  const struct guatiao_alloc *alloc;
} guatiao_buffer;
typedef union guatiao_payload {
  uint8_t b;
  struct guatiao_string text;
  struct guatiao_buffer bytes;
  struct guatiao_list list;
  struct guatiao_map map;
} guatiao_payload;
typedef struct guatiao_value {
  uint32_t tag;
  uint32_t _pad;
  union guatiao_payload payload;
} guatiao_value;
typedef struct guatiao_bytes {
  const uint8_t *ptr;
  size_t len;
} guatiao_bytes;
guatiao_status guatiao_schema_validate(const struct guatiao_value *schema,
                                       const struct guatiao_value *config,
                                       const struct guatiao_alloc *alloc,
                                       struct guatiao_value *out_error);
const struct guatiao_value *guatiao_schema_resolve(const struct guatiao_value *schema,
                                                   struct guatiao_str key);
guatiao_status guatiao_schema_unflatten(const struct guatiao_value *schema,
                                        struct guatiao_str key,
                                        const struct guatiao_value *flat,
                                        const struct guatiao_alloc *alloc,
                                        struct guatiao_value *out);
guatiao_status guatiao_value_free(struct guatiao_value *v);
guatiao_status guatiao_value_clone(const struct guatiao_alloc *alloc,
                                   const struct guatiao_value *src,
                                   struct guatiao_value *out);
guatiao_status guatiao_value_null(struct guatiao_value *out);
guatiao_status guatiao_value_absent(struct guatiao_value *out);
guatiao_status guatiao_value_bool(uint8_t b, struct guatiao_value *out);
guatiao_status guatiao_value_map(const struct guatiao_alloc *alloc, struct guatiao_value *out);
guatiao_status guatiao_value_list(const struct guatiao_alloc *alloc, struct guatiao_value *out);
guatiao_status guatiao_value_string(const struct guatiao_alloc *alloc,
                                    struct guatiao_str text,
                                    struct guatiao_value *out);
guatiao_status guatiao_value_number(const struct guatiao_alloc *alloc,
                                    struct guatiao_str text,
                                    struct guatiao_value *out);
guatiao_status guatiao_value_bytes(const struct guatiao_alloc *alloc,
                                   struct guatiao_bytes bytes,
                                   struct guatiao_value *out);
guatiao_status guatiao_string_push(const struct guatiao_alloc *alloc,
                                   struct guatiao_value *node,
                                   struct guatiao_str text);
#define GUATIAO_KEY_SCHEMA "$schema"
#define GUATIAO_KEY_DIALECT "https:
#define GUATIAO_KEY_TYPE "type"
#define GUATIAO_KEY_TITLE "title"
#define GUATIAO_KEY_DESCRIPTION "description"
#define GUATIAO_KEY_DEFAULT "default"
#define GUATIAO_KEY_PROPERTIES "properties"
#define GUATIAO_KEY_REQUIRED "required"
#define GUATIAO_KEY_ADDITIONAL_PROPERTIES "additionalProperties"
#define GUATIAO_KEY_ITEMS "items"
#define GUATIAO_KEY_MINIMUM "minimum"
#define GUATIAO_KEY_MAXIMUM "maximum"
#define GUATIAO_KEY_ENUM "enum"
#define GUATIAO_KEY_CONST "const"
#define GUATIAO_KEY_ANY_OF "anyOf"
#define GUATIAO_KEY_ONE_OF "oneOf"
#define GUATIAO_KEY_X_SECTION "x-section"
#define GUATIAO_KEY_X_ORDER "x-order"
#define GUATIAO_KEY_X_ADVANCED "x-advanced"
#define GUATIAO_KEY_X_SENSITIVE "x-sensitive"
#define GUATIAO_KEY_X_ENUM_LABELS "x-enum-labels"
#define GUATIAO_KEY_X_VARIANT_TAG "x-variant-tag"
#define GUATIAO_KEY_TYPE_BOOLEAN "boolean"
#define GUATIAO_KEY_TYPE_INTEGER "integer"
#define GUATIAO_KEY_TYPE_NUMBER "number"
#define GUATIAO_KEY_TYPE_STRING "string"
#define GUATIAO_KEY_TYPE_ARRAY "array"
#define GUATIAO_KEY_TYPE_OBJECT "object"
#define GUATIAO_KEY_TYPE_BYTES "bytes"