crates/guatiao-serde/include/guatiao_serde.h


#define GUATIAO_BYTES_DATA_URI 0
#define GUATIAO_BYTES_BASE64 1
#define GUATIAO_BYTES_ARRAY 2
#define GUATIAO_BYTES_REFUSE 3
#define GUATIAO_READ_DATA_URIS (1 << 8)
#define GUATIAO_PRETTY (1 << 9)