bindings/dart/lib/src/bindings.g.dart


  late final _guatiao_schema_resolvePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<guatiao_value> Function(ffi.Pointer<guatiao_value>,
              guatiao_str)>>('guatiao_schema_resolve');
  late final _guatiao_schema_resolve = _guatiao_schema_resolvePtr.asFunction<
      ffi.Pointer<guatiao_value> Function(
          ffi.Pointer<guatiao_value>, guatiao_str)>();

  int guatiao_schema_unflatten(
    ffi.Pointer<guatiao_value> schema,
    guatiao_str key,
    ffi.Pointer<guatiao_value> flat,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_schema_unflatten(
      schema,
      key,
      flat,
      alloc,
      out,
    );
  }

  late final _guatiao_schema_unflattenPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>,
              guatiao_str,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_schema_unflatten');
  late final _guatiao_schema_unflatten =
      _guatiao_schema_unflattenPtr.asFunction<
          int Function(
              ffi.Pointer<guatiao_value>,
              guatiao_str,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>();

  int guatiao_schema_validate(
    ffi.Pointer<guatiao_value> schema,
    ffi.Pointer<guatiao_value> config,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out_error,
  ) {
    return _guatiao_schema_validate(
      schema,
      config,
      alloc,
      out_error,
    );
  }

  late final _guatiao_schema_validatePtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_schema_validate');
  late final _guatiao_schema_validate = _guatiao_schema_validatePtr.asFunction<
      int Function(ffi.Pointer<guatiao_value>, ffi.Pointer<guatiao_value>,
          ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  int guatiao_string_push(
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> node,
    guatiao_str text,
  ) {
    return _guatiao_string_push(
      alloc,
      node,
      text,
    );
  }

  late final _guatiao_string_pushPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>, guatiao_str)>>('guatiao_string_push');
  late final _guatiao_string_push = _guatiao_string_pushPtr.asFunction<
      int Function(ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>,
          guatiao_str)>();

  int guatiao_value_absent(
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_value_absent(
      out,
    );
  }

  late final _guatiao_value_absentPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>)>>('guatiao_value_absent');
  late final _guatiao_value_absent = _guatiao_value_absentPtr
      .asFunction<int Function(ffi.Pointer<guatiao_value>)>();

  int guatiao_value_bool(
    bool b,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_value_bool(
      b,
      out,
    );
  }

  late final _guatiao_value_boolPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Bool, ffi.Pointer<guatiao_value>)>>('guatiao_value_bool');
  late final _guatiao_value_bool = _guatiao_value_boolPtr
      .asFunction<int Function(bool, ffi.Pointer<guatiao_value>)>();

  int guatiao_value_bytes(
    ffi.Pointer<guatiao_alloc> alloc,
    guatiao_bytes bytes,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_value_bytes(
      alloc,
      bytes,
      out,
    );
  }

  late final _guatiao_value_bytesPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(ffi.Pointer<guatiao_alloc>, guatiao_bytes,
              ffi.Pointer<guatiao_value>)>>('guatiao_value_bytes');
  late final _guatiao_value_bytes = _guatiao_value_bytesPtr.asFunction<
      int Function(ffi.Pointer<guatiao_alloc>, guatiao_bytes,
          ffi.Pointer<guatiao_value>)>();

  int guatiao_value_clone(
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> src,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_value_clone(
      alloc,
      src,
      out,
    );
  }

  late final _guatiao_value_clonePtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_value>)>>('guatiao_value_clone');
  late final _guatiao_value_clone = _guatiao_value_clonePtr.asFunction<
      int Function(ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>,
          ffi.Pointer<guatiao_value>)>();

  int guatiao_value_free(
    ffi.Pointer<guatiao_value> v,
  ) {
    return _guatiao_value_free(
      v,
    );
  }

  late final _guatiao_value_freePtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>)>>('guatiao_value_free');
  late final _guatiao_value_free = _guatiao_value_freePtr
      .asFunction<int Function(ffi.Pointer<guatiao_value>)>();

  int guatiao_value_list(
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_value_list(
      alloc,
      out,
    );
  }

  late final _guatiao_value_listPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_value_list');
  late final _guatiao_value_list = _guatiao_value_listPtr.asFunction<
      int Function(ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  int guatiao_value_map(
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_value_map(
      alloc,
      out,
    );
  }

  late final _guatiao_value_mapPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_value_map');
  late final _guatiao_value_map = _guatiao_value_mapPtr.asFunction<
      int Function(ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  int guatiao_value_null(
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_value_null(
      out,
    );
  }

  late final _guatiao_value_nullPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>)>>('guatiao_value_null');
  late final _guatiao_value_null = _guatiao_value_nullPtr
      .asFunction<int Function(ffi.Pointer<guatiao_value>)>();

  int guatiao_value_number(
    ffi.Pointer<guatiao_alloc> alloc,
    guatiao_str text,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_value_number(
      alloc,
      text,
      out,
    );
  }

  late final _guatiao_value_numberPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(ffi.Pointer<guatiao_alloc>, guatiao_str,
              ffi.Pointer<guatiao_value>)>>('guatiao_value_number');
  late final _guatiao_value_number = _guatiao_value_numberPtr.asFunction<
      int Function(ffi.Pointer<guatiao_alloc>, guatiao_str,
          ffi.Pointer<guatiao_value>)>();

  int guatiao_value_string(
    ffi.Pointer<guatiao_alloc> alloc,
    guatiao_str text,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_value_string(
      alloc,
      text,
      out,
    );
  }

  late final _guatiao_value_stringPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(ffi.Pointer<guatiao_alloc>, guatiao_str,
              ffi.Pointer<guatiao_value>)>>('guatiao_value_string');
  late final _guatiao_value_string = _guatiao_value_stringPtr.asFunction<
      int Function(ffi.Pointer<guatiao_alloc>, guatiao_str,
          ffi.Pointer<guatiao_value>)>();
}

const int GUATIAO_ABI_VERSION = 1;

const int GUATIAO_BYTES_ARRAY = 2;

const int GUATIAO_BYTES_BASE64 = 1;

const int GUATIAO_BYTES_DATA_URI = 0;

const int GUATIAO_BYTES_REFUSE = 3;

const String GUATIAO_KEY_ADDITIONAL_PROPERTIES = 'additionalProperties';

const String GUATIAO_KEY_ANY_OF = 'anyOf';

const String GUATIAO_KEY_CONST = 'const';

const String GUATIAO_KEY_DEFAULT = 'default';

const String GUATIAO_KEY_DESCRIPTION = 'description';

const String GUATIAO_KEY_DIALECT =
    'https://json-schema.org/draft/2020-12/schema';

const String GUATIAO_KEY_ENUM = 'enum';

const String GUATIAO_KEY_ITEMS = 'items';

const String GUATIAO_KEY_MAXIMUM = 'maximum';

const String GUATIAO_KEY_MINIMUM = 'minimum';

const String GUATIAO_KEY_ONE_OF = 'oneOf';

const String GUATIAO_KEY_PROPERTIES = 'properties';

const String GUATIAO_KEY_REQUIRED = 'required';

const String GUATIAO_KEY_SCHEMA = '\$schema';

const String GUATIAO_KEY_TITLE = 'title';

const String GUATIAO_KEY_TYPE = 'type';

const String GUATIAO_KEY_TYPE_ARRAY = 'array';

const String GUATIAO_KEY_TYPE_BOOLEAN = 'boolean';

const String GUATIAO_KEY_TYPE_BYTES = 'bytes';

const String GUATIAO_KEY_TYPE_INTEGER = 'integer';

const String GUATIAO_KEY_TYPE_NUMBER = 'number';

const String GUATIAO_KEY_TYPE_OBJECT = 'object';

const String GUATIAO_KEY_TYPE_STRING = 'string';

const String GUATIAO_KEY_X_ADVANCED = 'x-advanced';

const String GUATIAO_KEY_X_ENUM_LABELS = 'x-enum-labels';

const String GUATIAO_KEY_X_ORDER = 'x-order';

const String GUATIAO_KEY_X_SECTION = 'x-section';

const String GUATIAO_KEY_X_SENSITIVE = 'x-sensitive';

const String GUATIAO_KEY_X_VARIANT_TAG = 'x-variant-tag';

const int GUATIAO_MAX_DEPTH = 128;

const int GUATIAO_MERGE_DEEP = 2;

const int GUATIAO_MERGE_OPT_MERGELISTS = 1;

const int GUATIAO_MERGE_SIMPLE = 1;

const int GUATIAO_MERGE_SUBSTITUTE = 3;

const int GUATIAO_PAYLOAD_SEPARATOR = 46;

const int GUATIAO_PRETTY = 512;

const int GUATIAO_READ_DATA_URIS = 256;

final class guatiao_alloc extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external ffi.Pointer<ffi.Void> ctx;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void> ctx, ffi.Size size, ffi.Size align)>> alloc;

  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void> ctx,
              ffi.Pointer<ffi.Void> ptr, ffi.Size size, ffi.Size align)>> free;

  external ffi
      .Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void> ctx)>>
      release;

  static ffi.Pointer<guatiao_alloc> $allocate(
    ffi.Allocator $allocator, {
    required int struct_size,
    required ffi.Pointer<ffi.Void> ctx,
    required ffi.Pointer<
            ffi.NativeFunction<
                ffi.Pointer<ffi.Void> Function(
                    ffi.Pointer<ffi.Void> ctx, ffi.Size size, ffi.Size align)>>
        alloc,
    required ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(ffi.Pointer<ffi.Void> ctx,
                    ffi.Pointer<ffi.Void> ptr, ffi.Size size, ffi.Size align)>>
        free,
    required ffi.Pointer<
            ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void> ctx)>>
        release,
  }) =>
      $allocator<guatiao_alloc>()
        ..ref.struct_size = struct_size
        ..ref.ctx = ctx
        ..ref.alloc = alloc
        ..ref.free = free
        ..ref.release = release;
}

final class guatiao_buffer extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Size()
  external int len;

  @ffi.Size()
  external int cap;

  external ffi.Pointer<guatiao_alloc> alloc;
